<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="140dp"
    android:layout_margin="10dp"
    android:outlineSpotShadowColor="@color/colorAccent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/product_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/offer_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/offer"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="20% OFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp" >

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="T-shirt for men cotton 100%"
            android:text="@string/product_name"
            android:textColor="@android:color/black"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/offerPrice_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="200 LE"
            android:text="@string/offer_price"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/originalPrice_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/strike"
                android:text="@string/original_price"
                android:textSize="12sp"
                tools:text="250 LE" />

            <ImageView
                android:id="@+id/love_img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="194dp"
                android:layout_marginLeft="156dp"
                android:layout_marginTop="22dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_toRightOf="@id/originalPrice_txt"
                android:src="@drawable/icon_love" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>